<resources>
    <string name="app_name">PSMF</string>
    <string name="b_hanspaulka">HANSP</string>
    <string name="b_veterani">VET</string>
    <string name="b_superveterani">SuperVET</string>
    <string name="b_ultraveterani">UltraVET</string>
    <string name="vysledky">Výsledky</string>
    <string name="tabulka">Tabulka</string>
    <string name="rozpis">Rozpis</string>
    <string name="vyhledat">Vyhledat</string>
    <string name="nastaveni">Nastavení</string>
    <string name="otevriPSMFweb">Otevři PSMF web</string>
    <string name="otevriTydenikHanspaulka">Otevři týdeník Hanspaulka</string>
    <string name="pridat_zapasy">Přidej zápasy do kalendáře</string>
    <string name="favorite">Přidej mezi oblíbené</string>
    <string name="pridano">Přidáno mezi oblíbené</string>
    <string name="favorites_exists">Tým je již mezi tvými oblíbenými</string>
    <string name="moc_favorites">Nelze mít více jak 5 týmů mezi Oblíbenými</string>
    <string name="error_nacitanidat">Došlo k chybě při načítání dat ze serveru.</string>
    <string name="tymsmazan">"Tým smazán"</string>
    <string name="hanspaulka">Hanspaulka</string>
    <string name="veterani">Veteráni</string>
    <string name="superveterani">Superveteráni</string>
    <string name="ultraveterani">Ultraveteráni</string>
    <string name="oblibenetymy">Oblíbené týmy</string>
    <string name="vysledkyhledani">Výsledky hledání</string>
    <string name="prehledskupiny">Přehled skupiny </string>
    <string name="nadchazejicizapasy">Nadcházející zápasy:</string>
    <string name="odebratoblibenetymy">Oblíbené týmy - odebrat</string>
    <string name="liga">Liga</string>
    <string name="tym">Tým</string>
    <string name="vrp">V/R/P</string>
    <string name="gf">GF</string>
    <string name="ga">GA</string>
    <string name="odeh">Odeh.</string>
    <string name="bodu">Bodů</string>
    <string name="hint_hledanytym">Zadej jméno hledaného týmu</string>
</resources>
