<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <Button
            android:id="@+id/btn_otevriPSMFweb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/tlacidlo"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="5dp"
            android:text="@string/otevriPSMFweb" />

        <Button
            android:id="@+id/btn_TydenikHanspaulka"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/tlacidlo"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="5dp"
            android:text="@string/otevriTydenikHanspaulka" />

        <Button
            android:id="@+id/pridejzapasydokalendare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/tlacidlo"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="5dp"
            android:text="@string/pridat_zapasy" />

        <Button
            android:id="@+id/pridejdooblibenych"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/tlacidlo"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="5dp"
            android:text="@string/favorite" />

        <TextView
            android:id="@+id/showfavorites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/vypis_favorites"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"></LinearLayout>
        </ScrollView>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>